# Hook

./: .env.prod  .gitignore  Dockerfile  bot.py  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt  web.py
.github/workflows/: docker_build.yml
src/plugins/admin/: __init__.py  auto_agree.py
src/plugins/translate/: __init__.py
src/plugins/zhihu/: __init__.py
