[tool.poetry]
name = "coolqbot"
version = "0.1.0"
description = "基于nonebot的QQ机器人"
authors = ["iBoy <547142436@qq.com>"]

[tool.poetry.dependencies]
python = "^3.8"
nonebot2 = "2.0.0a7"
nb-cli = "^0.3.1"
pillow = "^8.1.0"
requests = "^2.25.1"
bs4 = "^0.0.1"
fake-useragent = "^0.1.11"
aiohttp = "^3.7.3"
nonebot-plugin-apscheduler = "^0.1.0"
nonebot-plugin-navicat = "^0.1.2"
nonebot-plugin-picsearcher = "^0.1.2"
nonebot-plugin-sentry = "^0.1.1"
nonebot-plugin-test = "^0.1.0"
haruka-bot = "^1.1.2"
httpx = "^0.16.1"
asyncio = "^3.4.3"
qrcode = "^6.1"
psutil = "^5.8.0"
emoji = "^0.6.0"
google-trans-new = "^1.1.9"
typing-extensions = "^3.7.4"
feedparser = "^6.0.2"
retrying = "^1.3.3"
pyquery = "^1.4.3"
cssselect = "^1.1.0"
sgmllib3k = "^1.0.0"
aliyun-python-sdk-core = "^2.13.30"


[tool.poetry.dev-dependencies]
nonebot-plugin-test = "^0.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
default = true
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"